CS/CS-340/assignments/9-heap/dump.txt
n:x file included from /usr/include/c++/14.2.1/string:51,
                 from /usr/include/c++/14.2.1/bits/locale_classes.h:40,
                 from /usr/include/c++/14.2.1/bits/ios_base.h:41,
                 from /usr/include/c++/14.2.1/ios:44,
                 from /usr/include/c++/14.2.1/ostream:40,
                 from /usr/include/c++/14.2.1/iostream:41,
                 from test-pq.cc:8:
/usr/include/c++/14.2.1/bits/stl_algobase.h: In instantiation of ‘constexpr void std::iter_swap(_ForwardIterator1, _ForwardIterator2) [with _ForwardIterator1 = __gnu_cxx::__normal_iterator<const int*, vector<int> >; _ForwardIterator2 = __gnu_cxx::__normal_iterator<const int*, vector<int> >]’:
heap.h:130:27:   required from ‘size_t heap_bubble_up(RAIterator, size_t, size_t, COMPARE) [with RAIterator = __gnu_cxx::__normal_iterator<const int*, std::vector<int> >; COMPARE = std::less<int>; size_t = long unsigned int]’
  130 |             std::iter_swap(first, parent);
      |             ~~~~~~~~~~~~~~^~~~~~~~~~~~~~~
heap.h:188:33:   required from ‘size_t heapify_in_place_up(RAIterator, RAIterator, COMPARE) [with RAIterator = __gnu_cxx::__normal_iterator<const int*, std::vector<int> >; COMPARE = std::less<int>; size_t = long unsigned int]’
  188 |         nswaps += heap_bubble_up(begin, nodes, i, compare);
      |                   ~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~
heap_priority_queue.h:12:24:   required from ‘heap_priority_queue<T, CONTAINER, COMPARE>::heap_priority_queue(ITERATOR, ITERATOR) [with ITERATOR = __gnu_cxx::__normal_iterator<const int*, std::vector<int> >; T = int; CONTAINER = std::vector<int>; COMPARE = std::less<int>]’
   12 |     heapify_in_place_up(begin, end, compare);
      |     ~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~
test-pq.cc:46:59:   required from here
   46 |     heap_priority_queue<int> pq(input.begin(), input.end());
      |                                                           ^
/usr/include/c++/14.2.1/bits/stl_algobase.h:185:11: error: no matching function for call to ‘swap(const int&, const int&)’
  185 |       swap(*__a, *__b);
      |       ~~~~^~~~~~~~~~~~
In file included from /usr/include/c++/14.2.1/exception:166,
                 from /usr/include/c++/14.2.1/ios:41:
/usr/include/c++/14.2.1/bits/exception_ptr.h:230:5: note: candidate: ‘void std::__exception_ptr::swap(exception_ptr&, exception_ptr&)’
  230 |     swap(exception_ptr& __lhs, exception_ptr& __rhs)
      |     ^~~~
/usr/include/c++/14.2.1/bits/exception_ptr.h:230:25: note:   no known conversion for argument 1 from ‘const int’ to ‘std::__exception_ptr::exception_ptr&’
  230 |     swap(exception_ptr& __lhs, exception_ptr& __rhs)
      |          ~~~~~~~~~~~~~~~^~~~~
In file included from /usr/include/c++/14.2.1/bits/exception_ptr.h:41:
/usr/include/c++/14.2.1/bits/move.h:213:5: note: candidate: ‘template<class _Tp> constexpr std::_Require<std::__not_<std::__is_tuple_like<_Tp> >, std::is_move_constructible<_Tp>, std::is_move_assignable<_Tp> > std::swap(_Tp&, _Tp&)’
  213 |     swap(_Tp& __a, _Tp& __b)
      |     ^~~~
/usr/include/c++/14.2.1/bits/move.h:213:5: note:   template argument deduction/substitution failed:
In file included from /usr/include/c++/14.2.1/bits/move.h:37:
/usr/include/c++/14.2.1/type_traits: In substitution of ‘template<bool _Cond, class _Tp> using std::__enable_if_t = typename std::enable_if::type [with bool _Cond = false; _Tp = void]’:
/usr/include/c++/14.2.1/type_traits:2308:11:   required by substitution of ‘template<class ... _Cond> using std::_Require = std::__enable_if_t<((bool)std::__and_<_Bn>::value)> [with _Cond = {std::__not_<std::__is_tuple_like<const int> >, std::is_move_constructible<const int>, std::is_move_assignable<const int>}]’
 2308 |     using _Require = __enable_if_t<__and_<_Cond...>::value>;
      |           ^~~~~~~~
/usr/include/c++/14.2.1/bits/move.h:213:5:   required by substitution of ‘template<class _Tp> constexpr std::_Require<std::__not_<std::__is_tuple_like<_Tp> >, std::is_move_constructible<_Tp>, std::is_move_assignable<_Tp> > std::swap(_Tp&, _Tp&) [with _Tp = const int]’
  213 |     swap(_Tp& __a, _Tp& __b)
      |     ^~~~
/usr/include/c++/14.2.1/bits/stl_algobase.h:185:11:   required from ‘constexpr void std::iter_swap(_ForwardIterator1, _ForwardIterator2) [with _ForwardIterator1 = __gnu_cxx::__normal_iterator<const int*, vector<int> >; _ForwardIterator2 = __gnu_cxx::__normal_iterator<const int*, vector<int> >]’
  185 |       swap(*__a, *__b);
      |       ~~~~^~~~~~~~~~~~
heap.h:130:27:   required from ‘size_t heap_bubble_up(RAIterator, size_t, size_t, COMPARE) [with RAIterator = __gnu_cxx::__normal_iterator<const int*, std::vector<int> >; COMPARE = std::less<int>; size_t = long unsigned int]’
  130 |             std::iter_swap(first, parent);
      |             ~~~~~~~~~~~~~~^~~~~~~~~~~~~~~
heap.h:188:33:   required from ‘size_t heapify_in_place_up(RAIterator, RAIterator, COMPARE) [with RAIterator = __gnu_cxx::__normal_iterator<const int*, std::vector<int> >; COMPARE = std::less<int>; size_t = long unsigned int]’
  188 |         nswaps += heap_bubble_up(begin, nodes, i, compare);
      |                   ~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~
heap_priority_queue.h:12:24:   required from ‘heap_priority_queue<T, CONTAINER, COMPARE>::heap_priority_queue(ITERATOR, ITERATOR) [with ITERATOR = __gnu_cxx::__normal_iterator<const int*, std::vector<int> >; T = int; CONTAINER = std::vector<int>; COMPARE = std::less<int>]’
   12 |     heapify_in_place_up(begin, end, compare);
      |     ~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~
test-pq.cc:46:59:   required from here
   46 |     heap_priority_queue<int> pq(input.begin(), input.end());
      |                                                           ^
/usr/include/c++/14.2.1/type_traits:138:11: error: no type named ‘type’ in ‘struct std::enable_if<false, void>’
  138 |     using __enable_if_t = typename enable_if<_Cond, _Tp>::type;
      |           ^~~~~~~~~~~~~
/usr/include/c++/14.2.1/bits/stl_algobase.h: In instantiation of ‘constexpr void std::iter_swap(_ForwardIterator1, _ForwardIterator2) [with _ForwardIterator1 = __gnu_cxx::__normal_iterator<const int*, vector<int> >; _ForwardIterator2 = __gnu_cxx::__normal_iterator<const int*, vector<int> >]’:
heap.h:130:27:   required from ‘size_t heap_bubble_up(RAIterator, size_t, size_t, COMPARE) [with RAIterator = __gnu_cxx::__normal_iterator<const int*, std::vector<int> >; COMPARE = std::less<int>; size_t = long unsigned int]’
  130 |             std::iter_swap(first, parent);
      |             ~~~~~~~~~~~~~~^~~~~~~~~~~~~~~
heap.h:188:33:   required from ‘size_t heapify_in_place_up(RAIterator, RAIterator, COMPARE) [with RAIterator = __gnu_cxx::__normal_iterator<const int*, std::vector<int> >; COMPARE = std::less<int>; size_t = long unsigned int]’
  188 |         nswaps += heap_bubble_up(begin, nodes, i, compare);
      |                   ~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~
heap_priority_queue.h:12:24:   required from ‘heap_priority_queue<T, CONTAINER, COMPARE>::heap_priority_queue(ITERATOR, ITERATOR) [with ITERATOR = __gnu_cxx::__normal_iterator<const int*, std::vector<int> >; T = int; CONTAINER = std::vector<int>; COMPARE = std::less<int>]’
   12 |     heapify_in_place_up(begin, end, compare);
      |     ~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~
test-pq.cc:46:59:   required from here
   46 |     heap_priority_queue<int> pq(input.begin(), input.end());
      |                                                           ^
/usr/include/c++/14.2.1/bits/move.h:237:5: note: candidate: ‘template<class _Tp, long unsigned int _Nm> constexpr std::__enable_if_t<((bool)std::__is_swappable<_Tp>::value)> std::swap(_Tp (&)[_Nm], _Tp (&)[_Nm])’
  237 |     swap(_Tp (&__a)[_Nm], _Tp (&__b)[_Nm])
      |     ^~~~
/usr/include/c++/14.2.1/bits/move.h:237:5: note:   template argument deduction/substitution failed:
/usr/include/c++/14.2.1/bits/stl_algobase.h:185:11: note:   mismatched types ‘_Tp [_Nm]’ and ‘const int’
  185 |       swap(*__a, *__b);
      |       ~~~~^~~~~~~~~~~~
In file included from /usr/include/c++/14.2.1/bits/stl_algobase.h:64:
/usr/include/c++/14.2.1/bits/stl_pair.h:1089:5: note: candidate: ‘template<class _T1, class _T2> constexpr typename std::enable_if<std::__and_<std::__is_swappable<_T1>, std::__is_swappable<_T2> >::value>::type std::swap(pair<_T1, _T2>&, pair<_T1, _T2>&)’
 1089 |     swap(pair<_T1, _T2>& __x, pair<_T1, _T2>& __y)
      |     ^~~~
/usr/include/c++/14.2.1/bits/stl_pair.h:1089:5: note:   template argument deduction/substitution failed:
/usr/include/c++/14.2.1/bits/stl_algobase.h:185:11: note:   mismatched types ‘std::pair<_T1, _T2>’ and ‘const int’
  185 |       swap(*__a, *__b);
      |       ~~~~^~~~~~~~~~~~
/usr/include/c++/14.2.1/bits/stl_pair.h:1106:5: note: candidate: ‘template<class _T1, class _T2> typename std::enable_if<(! std::__and_<std::__is_swappable<_T1>, std::__is_swappable<_T2> >::value)>::type std::swap(pair<_T1, _T2>&, pair<_T1, _T2>&)’ (deleted)
 1106 |     swap(pair<_T1, _T2>&, pair<_T1, _T2>&) = delete;
      |     ^~~~
/usr/include/c++/14.2.1/bits/stl_pair.h:1106:5: note:   template argument deduction/substitution failed:
/usr/include/c++/14.2.1/bits/stl_algobase.h:185:11: note:   mismatched types ‘std::pair<_T1, _T2>’ and ‘const int’
  185 |       swap(*__a, *__b);
      |       ~~~~^~~~~~~~~~~~
make: *** [Makefile:35: 6-pq] Error 1
